# piconfc

./: CMakeLists.txt
include/: piconfc.h  piconfc_I2C.h  piconfc_NDEF.h  piconfc_NTAG.h  piconfc_PN532.h
src/: CMakeLists.txt  piconfc.c  piconfc_I2C.c  piconfc_NDEF.c  piconfc_NTAG.c  piconfc_PN532.c
